# Mini-Shell

./: CMakeLists.txt  README.md
include/: colors.h  command.h  executor.h  history.h  logger.h  parser.h
src/: command.c  executor.c  history.c  logger.c  main.c  parser.c  shell.c
